Preparing the documentation for 2.2.0

--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -6,7 +6,7 @@
     <h1> <a id="delimiters"> Delimiters </a> </h1>
 
     <p>
-        By default Easy brings two types of delimiters, which are the <span class="note">easy</span> delimiter and the
+        By default Easy brings some delimiters, which are the <span class="note">easy</span> delimiter and the
         <span class="note">common</span> delimiter that is used by Vue.js, Angular.js, and others.
     </p>
 
@@ -34,6 +34,14 @@
     <p e-ignore>
         To use this delimiter just do the following: <span class="note"> <span
                 class="mark-el">{{</span> [Content] <span class="mark-el">}}</span> </span>
+    </p>
+
+    <h3> <a id="dlm_html"> HTML Delimiter (<small class="mark-el">Since v2.2.0+</small>)</a> </h3>
+
+    <p e-ignore>
+        To use this delimiter just do the following: <span class="note"> <span
+                class="mark-el">{html{</span> [Property] <span class="mark-el">}}</span> </span>
+        <br> Which is used to process html snippets passed by a property.
     </p>
 
     <p>
