--- a/docs/components/doc-sections/en/methods.html
+++ b/docs/components/doc-sections/en/methods.html
@@ -386,6 +386,17 @@
             Expression check.
         </p>
     </div>
+
+    <h3><a id="method_compile">compile</a></h3>
+    <p>
+        Usado para compilar um elemento
+    </p>
+
+    <h3><a id="method_compile">toElement (<small class="mark-el">Since v2.2.0+</small>)</a></h3>
+    <p>
+        Usado para transformar um texto de html em elemento
+    </p>
+
 </section>
 <script>
     this.mounted = function (el) {
