--- a/docs/components/doc-sections/pt/methods.html
+++ b/docs/components/doc-sections/pt/methods.html
@@ -363,6 +363,17 @@
             Lembre de escapar valores de `open` e `close` se preciso, porque eles passam por um Expressão Regular.
         </p>
     </div>
+
+    <h3><a id="method_compile">compile</a></h3>
+    <p>
+        Usado para compilar um elemento
+    </p>
+
+    <h3><a id="method_compile">toElement (<small class="mark-el">Desde v2.2.0+</small>)</a></h3>
+    <p>
+        Usado para transformar um texto de html em elemento
+    </p>
+
 </section>
 <script>
     this.mounted = function (el) {
