--- a/docs/components/views/tutorial.html
+++ b/docs/components/views/tutorial.html
@@ -48,6 +48,7 @@
                     <ul>
                         <li> <a mark="#dlm_easy"> Easy </a> </li>
                         <li> <a mark="#dlm_common"> Common </a> </li>
+                        <li> <a mark="#dlm_html"> HTML </a> </li>
                     </ul>
                 </li>
                 <li sec> <a i:href="/tutorial/bindings">
