--- a/docs/components/top.html
+++ b/docs/components/top.html
@@ -29,8 +29,8 @@
                 </div>
             </li>
             <li> <a on:click="showModal">Download</a> </li>
-            <li> <a href="https://github.com/AfonsoMatElias/easy" title="Github Page" class="fa fa-github"></a> </li>
-            <li> <a target="blank" href="https://www.facebook.com/easyjs" title="Facebook Page" class="fa fa-facebook"></a> </li>
+            <li> <a target="_blank" href="https://github.com/AfonsoMatElias/easy" title="Github Page" class="fa fa-github"></a> </li>
+            <li> <a target="_blank" href="https://www.facebook.com/easyjs" title="Facebook Page" class="fa fa-facebook"></a> </li>
             <li on:click="darkMode = !darkMode"> <span title="Switch Dark/Light Mode" class="fa {{ themeIco }}"></span> </li>
         </ul>
     </div>
